crates/pink-drivers/log_server/sideprog/src/snapshots/sideprog__buffer__tests__it_can_filter_by_contract_id.snap
---
source: src/buffer.rs
assertion_line: 372
expression: "pretty(&buffer.get_records(&hex(&contract), 0, 0, None))"
---
{
  "next": 3,
  "records": [
    {
      "blockNumber": 0,
      "contract": "0x0101010101010101010101010101010101010101010101010101010101010101",
      "entry": "0x0101010101010101010101010101010101010101010101010101010101010101",
      "execMode": "query",
      "level": 0,
      "message": "hello",
      "sequence": 0,
      "timestamp": 1,
      "type": "Log"
    },
    {
      "blockNumber": 1,
      "contract": "0x0101010101010101010101010101010101010101010101010101010101010101",
      "payload": "0x01020304",
      "sequence": 1,
      "topics": [
        "0x0202020202020202020202020202020202020202020202020202020202020202",
        "0x0303030303030303030303030303030303030303030303030303030303030303"
      ],
      "type": "Event"
    }
  ]
}
