crates/pink-drivers/log_server/sideprog/src/snapshots/sideprog__buffer__tests__it_can_query_with_all_conditions.snap
---
source: src/buffer.rs
assertion_line: 322
expression: "pretty(&buffer.get_records(&hex(&[1; 32]), 1, 1))"
---
{
  "next": 2,
  "records": [
    {
      "blockNumber": 1,
      "contract": "0x0101010101010101010101010101010101010101010101010101010101010101",
      "payload": "0x01020304",
      "sequence": 1,
      "topics": [
        "0x0202020202020202020202020202020202020202020202020202020202020202",
        "0x0303030303030303030303030303030303030303030303030303030303030303"
      ],
      "type": "Event"
    }
  ]
}
