crates/pink-drivers/log_server/sideprog/src/snapshots/sideprog__buffer__tests__it_can_query_with_from-2.snap
---
source: src/buffer.rs
assertion_line: 293
expression: "pretty(&buffer.get_records(\"\".into(), 4, 0))"
---
{
  "next": 3,
  "records": []
}
