crates/pink-drivers/log_server/sideprog/src/snapshots/sideprog__buffer__tests__it_can_query_with_negative_from.snap
---
source: src/buffer.rs
assertion_line: 434
expression: "pretty(&buffer.get_records(\"\", -1, 10, Some(42)))"
---
{
  "next": 5,
  "records": [
    {
      "blockNumber": 42,
      "contract": "0x0202020202020202020202020202020202020202020202020202020202020202",
      "payload": "0x02",
      "sequence": 4,
      "topics": [],
      "type": "Event"
    }
  ]
}
