crates/pink-drivers/log_server/sideprog/src/snapshots/sideprog__buffer__tests__it_can_rotate.snap
---
source: src/buffer.rs
assertion_line: 290
expression: "pretty(&buffer.get_records(\"\".into(), 0, 0))"
---
{
  "next": 3,
  "records": [
    {
      "blockNumber": 2,
      "contract": "0x0202020202020202020202020202020202020202020202020202020202020202",
      "nonce": "0x0102030405",
      "origin": "0x0101010101010101010101010101010101010101010101010101010101010101",
      "output": "0x0504030201",
      "sequence": 2,
      "type": "MessageOutput"
    }
  ]
}
