crates/pink-drivers/log_server/sideprog/src/snapshots/sideprog__buffer__tests__it_works.snap
---
source: src/buffer.rs
assertion_line: 359
expression: "pretty(&buffer.get_records(\"\".into(), 0, 0, None))"
---
{
  "next": 3,
  "records": [
    {
      "blockNumber": 0,
      "contract": "0x0101010101010101010101010101010101010101010101010101010101010101",
      "entry": "0x0101010101010101010101010101010101010101010101010101010101010101",
      "execMode": "query",
      "level": 0,
      "message": "hello",
      "sequence": 0,
      "timestamp": 1,
      "type": "Log"
    },
    {
      "blockNumber": 1,
      "contract": "0x0101010101010101010101010101010101010101010101010101010101010101",
      "payload": "0x01020304",
      "sequence": 1,
      "topics": [
        "0x0202020202020202020202020202020202020202020202020202020202020202",
        "0x0303030303030303030303030303030303030303030303030303030303030303"
      ],
      "type": "Event"
    },
    {
      "blockNumber": 2,
      "contract": "0x0202020202020202020202020202020202020202020202020202020202020202",
      "nonce": "0x0102030405",
      "origin": "0x0101010101010101010101010101010101010101010101010101010101010101",
      "output": "0x0504030201",
      "sequence": 2,
      "type": "MessageOutput"
    }
  ]
}
